<resources>
    <string name="app_name">Parsetagram</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="home_activity">HOME ACTIVITY</string>
    <string name="enter_a_caption">Enter a caption</string>
    <string name="create">Create</string>
    <string name="refresh">Refresh</string>
    <string name="homeAct">HomeActivity</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="log_out">Log Out</string>
    <string name ="camera">Camera</string>
    <string name ="gallery">Gallery</string>

    <string name="newpost">newPost</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
