<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <EditText
        android:id="@+id/etCaption"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="191dp"
        android:ems="10"
        android:hint="@string/enter_a_caption"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRefresh"
        android:layout_centerHorizontal="true"
        android:text="@string/create" />

    <Button
        android:id="@+id/btnRefresh"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/refresh" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/log_out"
        android:layout_alignParentRight="true" />

</RelativeLayout>