<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <EditText
        android:id="@+id/etCaptionold"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:layout_below="@+id/btnCamera"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/enter_a_caption"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnCreateOld"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/create" />

    <Button
        android:id="@+id/btnRefresh"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/refresh" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/log_out" />

    <!--<Button-->
        <!--android:id="@+id/btnCamera"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_below="@+id/ivPreview"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:foreground="@drawable/camera_shadow_fill"-->
        <!--android:onClick="onLaunchCamera"/>-->

    <ImageView
        android:id="@+id/ivPreviewOld"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        app:srcCompat="@android:color/darker_gray" />



</RelativeLayout>