<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etSUUsernameLayout"
        android:layout_marginTop="10dp"

        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etSignupUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textMultiLine" />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/etSUPasswordLayout"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSUUsernameLayout"
        app:hintAnimationEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etSignupPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etEmailLayout"
        android:layout_marginTop="10dp"

        android:layout_width="300dp"
        android:layout_below="@+id/etSUPasswordLayout"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etSignupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textMultiLine" />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmailLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="?attr/colorAccent"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

</RelativeLayout>